<?xml version="1.0"?>
<package>
  <name>yocs_docking_interactor</name>
  <version>0.0.0</version>
  <description>Provides api to get out from dock and navigate back to using autodocking and move_base</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>yocs_navigator</build_depend>
  <build_depend>yocs_ar_marker_tracking</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>yocs_navigator</run_depend>
  <run_depend>yocs_ar_marker_tracking</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
