<?xml version="1.0"?>
<package>
  <name>yocs_math_toolkit</name>
  <version>0.6.4</version>
  <description>
    Math toolkit for Yujin open control system. This package is intended to contain common use functions,
    mostly for simple mathematics but also for tf-related conversions.
    By no means it pretends to be an efficient and robust, widely used math library, but a play ground where
    to put common code that is typically repeated in many robot control programs.
  </description>
  
  <license>BSD</license>
  <author>Jorge Santos</author> 
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <url type="website">http://ros.org/wiki/yocs_math_toolkit</url>
  <url type="repository">https://github.com/yujinrobot/yujin_ocs</url>
  <url type="bugtracker">https://github.com/yujinrobot/yujin_ocs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <export>
  </export>
</package>
